Removed IP and password

--- a/ruby-mysql-web-prod/database.config
+++ b/ruby-mysql-web-prod/database.config
@@ -1,4 +1,4 @@
-HOST=192.168.53.24
+HOST=<NFS Server host or IP>
 VOLUME=mysql_data_prod
 MOUNT_AT=/mnt/mysql_data_prod
-PASSWORD=netapp01
+PASSWORD=<MySQL password>
