removed password and IP

--- a/ruby-mysql-web-test/database.config
+++ b/ruby-mysql-web-test/database.config
@@ -1,4 +1,4 @@
-HOST=192.168.53.24
+HOST=<NFS server host or IP>
 VOLUME=mysql_data_test
 MOUNT_AT=/mnt/mysql_data_test
-PASSWORD=netapp01
+PASSWORD=<MySQL Password>
